--- a/src/styles.css
+++ b/src/styles.css
@@ -7,14 +7,18 @@
     --footer_heigth: 50px;
 }
 
-html, body { height: 100%; }
+html, body { 
+    height: 100%; 
+    background-color: var(--first_color);
+    overflow: auto;
+}
 
 body { 
+    position: relative;
     margin: 0; 
     padding: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     color: white;
-    background-color: var(--first_color);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -53,10 +57,6 @@ ul, li, a{
 }
 
 @media (max-width: 768px) {
-
-    body {
-        overflow: scroll;
-    }
 
     mat-form-field, mat-label, mat-select, mat-option, input, mat-checkbox, button {
         font-size: 10px;
